# FullyCapture

./: .gitignore  CMakeLists.txt  Makefile  README.md  models  setup.py
config/: TotalCapture.yaml
fullycapture.egg-info/: PKG-INFO
fullycapture/app/: custom_dome_player.py  pyqtDomePlayer.py  pyqtGLWidget.py
fullycapture/cpp/: totalclib.py
fullycapture/data/: dataIO.py  dp_methods.py  example_data.py  learn_pose_prior.py
fullycapture/dome/: dome_helper.py
fullycapture/geometry/: geometry_process.py  triangulate.py  undistorter.py
fullycapture/model/: batch_adam.py  batch_adam_torch.py  batch_adam_torch_lbs.py  batch_smpl.py  batch_smpl_torch.py  lbs.py
fullycapture/optimizer/: bodyprior.py  fullyCapApp.py  std_capture.py  torch_smplify.py
fullycapture/scripts/: dct_test.m
fullycapture/tests/: internal_dome_viewer.py  test_egl_overlay.py  test_glut_viewer.py  test_median_filter.py  test_stage0_proposal.py  test_stage0_update.py
fullycapture/tools/: build_densepose_overlay.py  build_dome_op95_dataset.py  build_dome_uvi_dataset.py  build_doublefusion_data.py  build_kps_overlay.py  build_smpl_dct_prior.py  build_smpl_v_by_f_by_v.py  densepose_association.py  densepose_to_kps.py  generate_dome_image.py  learn_pose_prior.py  overlay_total.py  smpl_to_kps.py
fullycapture/ui/: domeMain.ui  ui_domeMain.py
fullycapture/utils/: config.py
fullycapture/vis/: egl_render.py  glut_viewer.py  glut_viewer_pcd.py  glut_viewer_tmp.py  plot_vis.py
totaldensify/cpp/: totalclib.py
totaldensify/data/: dataIO.py  dp_methods.py
totaldensify/function/: manualDiff_Smpl.py
totaldensify/geometry/: geometry_process.py  rigid_align.py  triangulate.py
totaldensify/model/: batch_adam.py  batch_adam_torch.py  batch_lbs.py  batch_rodrigues_torch.py  batch_smpl.py  batch_smpl_torch.py  batch_smpl_torch_lbs.py
totaldensify/optimizer/: bodyprior.py  std_capture.py  std_lifter.py  torch_smplify.py
(+51 files in other folders)
